--- a/Banco_CSharp/Banco_CSharp/Banco_CSharp.csproj
+++ b/Banco_CSharp/Banco_CSharp/Banco_CSharp.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Cliente.cs" />
+    <Compile Include="Classes\Funcionario.cs" />
+    <Compile Include="Classes\Gerente.cs" />
     <Compile Include="Classes\Usuario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
