Criando Conta Corrente e Poupança

--- a/Banco_CSharp/Banco_CSharp/Banco_CSharp.csproj
+++ b/Banco_CSharp/Banco_CSharp/Banco_CSharp.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Classes\Caixa.cs" />
     <Compile Include="Classes\Cliente.cs" />
     <Compile Include="Classes\Conta.cs" />
+    <Compile Include="Classes\ContaCorrente.cs" />
+    <Compile Include="Classes\ContaPoupanca.cs" />
     <Compile Include="Classes\Funcionario.cs" />
     <Compile Include="Classes\Gerente.cs" />
     <Compile Include="Classes\Usuario.cs" />
